--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        Заголовок
      </title>
 	 <link rel="stylesheet" href="css/index.css">
- <meta charset="widows-1251"
+ <meta charset="widows-1251">
  </head>
  
  <body>
