--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        Заголовок
      </title>
 	 <link rel="stylesheet" href="css/index.css">
- <meta charset="widows-1251">
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
  </head>
  
  <body>
