two files change

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			<div id="navigation">
 				
 				<ul>
-					<li><a href="#">Основное меню</a></li>
-					<li><a href="#">образование</a></li>
-					<li><a href="#">дипломы</a></li>
-					<li><a href="#">грамоты</a></li>
-					<li><a href="#">портфолио</a></li>
+					<li><a href="#">change text on english language</a></li>
+					<li><a href="#">Education</a></li>
+					<li><a href="#">diploms</a></li>
+					<li><a href="#">champions</a></li>
+					<li><a href="#">Portfolio</a></li>
 				</ul>
 			
 			</div>
